// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfigMenu /> should match to snapshot when isReloadMenu === true 1`] = `
<ul
  className="ConfigMenu"
>
  <li
    className="ConfigMenu__list ConfigMenu__bottom-line"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        New
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Edit widget
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
  >
    <button
      className="ConfigMenu__btn ConfigMenu__arrow ConfigMenu__arrow-up"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Refresh every
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
    key="never-menu"
  >
    <button
      className="ConfigMenu__btn ConfigMenu__dropdown-btn"
      data-name="interval-zero-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__check-icon ConfigMenu__check-icon--active"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Never
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
    key="reload-every-menu"
  >
    <button
      className="ConfigMenu__btn ConfigMenu__dropdown-btn"
      data-name="set-interval-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__check-icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <p
        className="ConfigMenu__select-container"
      >
        Reload Every 
        <select
          className="ConfigMenu__select"
          key="select"
          onChange={[Function]}
          value={5}
        >
          <option
            value={5}
          >
            5s
          </option>
          <option
            value={10}
          >
            10s
          </option>
          <option
            value={30}
          >
            30s
          </option>
          <option
            value={60}
          >
            60s
          </option>
        </select>
        <span
          className="ConfigMenu__select-arrow"
          key="arrow"
        />
      </p>
    </button>
  </li>
  <li
    className="ConfigMenu__list ConfigMenu__bottom-line"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Open with browser
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Delete this widget
      </span>
    </button>
  </li>
</ul>
`;

exports[`<ConfigMenu /> should match to snapshot when render default 1`] = `
<ul
  className="ConfigMenu"
>
  <li
    className="ConfigMenu__list ConfigMenu__bottom-line"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        New
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Edit widget
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
  >
    <button
      className="ConfigMenu__btn ConfigMenu__arrow ConfigMenu__arrow-down"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Refresh every
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list ConfigMenu__bottom-line"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Open with browser
      </span>
    </button>
  </li>
  <li
    className="ConfigMenu__list"
  >
    <button
      className="ConfigMenu__btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="ConfigMenu__icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg={Object {}}
      />
      <span
        className="ConfigMenu__text"
      >
        Delete this widget
      </span>
    </button>
  </li>
</ul>
`;
